--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodesync",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "node scripts for watching changed files and dirs then post them to remote server",
   "main": "./lib/nodesync",
   "directories": {
@@ -13,7 +13,9 @@
     "MD5": "~1.1.0",
     "form-data": "~0.1.0",
     "jch": "~0.0.0",
-    "watch-project": "~0.0.0"
+    "watch-project": "~0.0.0",
+    "commander": "~0.6.0",
+    "gaze": "~0.4.1"
   },
   "devDependencies": {},
   "scripts": {
